--- a/WordQuiz/WordQuiz/AppShell.xaml
+++ b/WordQuiz/WordQuiz/AppShell.xaml
@@ -80,8 +80,22 @@
         https://docs.microsoft.com/dotnet/api/xamarin.forms.shellgroupitem.flyoutdisplayoptions?view=xamarin-forms
     -->
     <FlyoutItem FlyoutDisplayOptions="AsMultipleItems">
-        <ShellContent Title="Home" Icon="tab_about.png" Route="MainPage" ContentTemplate="{DataTemplate local:MainPage}" />
-        <ShellContent Title="Leader Board" Icon="tab_about.png" Route="LeaderBoardPage" ContentTemplate="{DataTemplate local:LeaderBoardPage}" />
+        <Tab Title="Home">
+            <Tab.Icon>
+                <FontImageSource Glyph="{StaticResource IconHome}" FontFamily="fa-solid" />
+            </Tab.Icon>
+            <ShellContent Title="Home"  Route="MainPage" ContentTemplate="{DataTemplate local:MainPage}" />
+        </Tab>
+        <Tab Title="Leader Board">
+            <Tab.Icon>
+                <FontImageSource Glyph="{StaticResource IconThrophy}" FontFamily="fa-solid" />
+            </Tab.Icon>
+            <ShellContent Title="Leader Board"  Route="LeaderBoardPage" ContentTemplate="{DataTemplate local:LeaderBoardPage}" />
+        </Tab>
+        
+       
+        
+        
        
     </FlyoutItem>
 
@@ -98,7 +112,7 @@
         await Shell.Current.GoToAsync("//LoginPage");
     -->
     <ShellContent Route="RegisterPage" Shell.FlyoutBehavior="Disabled" ContentTemplate="{DataTemplate local:RegisterPage}" />
-    <ShellContent Route="GemaPage" Shell.FlyoutBehavior="Disabled" ContentTemplate="{DataTemplate local:GemaPage}" />
+    <ShellContent Route="GemaPage" Shell.FlyoutBehavior="Disabled" Shell.TabBarIsVisible="False" ContentTemplate="{DataTemplate local:GemaPage}" />
     <!-- Optional Templates 
     // These may be provided inline as below or as separate classes.
 
