--- a/WordQuiz/WordQuiz/Views/GemaPage.xaml
+++ b/WordQuiz/WordQuiz/Views/GemaPage.xaml
@@ -1,15 +1,75 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="WordQuiz.Views.GemaPage" NavigationPage.HasBackButton="True">
+             x:Class="WordQuiz.Views.GemaPage" NavigationPage.HasBackButton="True" NavigationPage.HasNavigationBar="True" >
+
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Margin="10">
+        <!--<StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Margin="10">
             
             <Label x:Name="lblScore" ></Label>
             <Label x:Name="txtWord" FontSize="Large" CharacterSpacing="5"></Label>
             <Label x:Name="lblDefinition"  ></Label>
             <Entry x:Name="txtInput" MaxLength="1" FontSize="Large" TextChanged="txtInput_TextChanged"  VerticalOptions="Center" HorizontalTextAlignment="Center"></Entry>
             <Button x:Name="btnNext" Clicked="btnNext_Clicked" Text="Next"></Button>
-        </StackLayout>
+        </StackLayout>-->
+        <Grid>
+
+            <StackLayout IsVisible="false" BackgroundColor="Transparent" x:Name="Indicator" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                <ActivityIndicator BackgroundColor="Transparent" IsRunning="True" Color="LightGreen" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" ></ActivityIndicator>
+            </StackLayout>
+
+            <Grid x:Name="board">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" x:Name="score"/> 
+                <RowDefinition Height="70" x:Name="word"/>
+                <RowDefinition Height="*" x:Name="definition"/>
+                <RowDefinition Height="70" x:Name="imgbtn"/>
+                <RowDefinition Height="*" x:Name="txt"/>
+                <RowDefinition Height="70"/>
+                <RowDefinition Height="70"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+
+                <Button Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"  BackgroundColor="SkyBlue" FontFamily="OpenSans-Bold" CornerRadius="10" Padding="5" Margin="5"  Text="Back" FontSize="Medium" TextColor="White"   x:Name="btnBack" Clicked="btnBack_Clicked" HeightRequest="50" WidthRequest="100"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+                    <Button.ImageSource>
+                        <FontImageSource Glyph="&#xf0a8;" FontFamily="fa-solid" Color="White" Size="Title"/>
+                    </Button.ImageSource>
+                </Button>
+                <Label Grid.Row="0" Grid.Column="3" x:Name="lblScoreName" FontFamily="OpenSans-BoldItalic" Text="Score :" HorizontalOptions="Center"  VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="Medium"></Label>
+                <Label Grid.Row="0" Grid.Column="4"  x:Name="lblScore" FontFamily="OpenSans-BoldItalic" HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="Medium"></Label>
+
+                <Label Grid.Row="1" Grid.ColumnSpan="5" x:Name="txtWord" FontSize="40" FontFamily="OpenSans-Bold" CharacterSpacing="5" HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+
+                <Frame Grid.Row="2" Grid.ColumnSpan="5" HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand">
+                    <Label  x:Name="lblDefinition"  HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontFamily="OpenSans-SemiBold" ></Label>
+
+                </Frame>
+            <ImageButton Grid.Row="3" Grid.Column="2" Margin="5"   BorderColor="Gray" BorderWidth="1" WidthRequest="50" HeightRequest="50" BackgroundColor="White" Source="round_volume_up_24.xml" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" ></ImageButton>
+
+                <Frame Grid.Row="4" Grid.Column="2" VerticalOptions="Center" Margin="0" Padding="0" >
+                    <Entry  x:Name="txtInput" MaxLength="1" FontSize="40" FontFamily="OpenSans-Bold" TextChanged="txtInput_TextChanged"  VerticalOptions="Center" HorizontalTextAlignment="Center" Keyboard="Plain" ReturnType="Go"></Entry>
+                </Frame>
+
+                <Button Grid.Row="5" Grid.Column="1" FontFamily="OpenSans-Bold" FontSize="Large" Grid.ColumnSpan="3" VerticalOptions="Start" BorderColor="Gray" BorderWidth="2" CornerRadius="10" x:Name="btnNext" Clicked="btnNext_Clicked" Text="Next word" >
+                    <Button.ImageSource>
+                        <FontImageSource Glyph="&#xf101;" FontFamily="fa-solid" Color="White" Size="Title"/>
+                    </Button.ImageSource>
+                </Button>
+
+           
+
+        </Grid>
+
+        
+            
+        </Grid>
+        
     </ContentPage.Content>
 </ContentPage>
