--- a/WordQuiz/WordQuiz/Views/LeaderBoardPage.xaml
+++ b/WordQuiz/WordQuiz/Views/LeaderBoardPage.xaml
@@ -67,7 +67,7 @@
             <StackLayout IsVisible="false" x:Name="Indicator" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                 <ActivityIndicator BackgroundColor="Transparent" IsRunning="True" Color="#4778c9" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" ></ActivityIndicator>
             </StackLayout>
-            <dg:DataGrid x:Name="CollectionLeaderBoard" SelectionEnabled="False" RowHeight="70" HeaderHeight="50" BorderColor="#CCCCCC" HeaderBackground="Gray" HeaderTextColor="WhiteSmoke" FontFamily="OpenSans-SemiBold">
+            <dg:DataGrid x:Name="CollectionLeaderBoard"  SelectionEnabled="False" RowHeight="55" HeaderHeight="50" BorderColor="Transparent" HeaderBackground="Gray" HeaderTextColor="WhiteSmoke" FontFamily="OpenSans-SemiBold">
                 <dg:DataGrid.HeaderFontSize>
                     <OnIdiom  x:TypeArguments="x:Double">
                         <OnIdiom.Tablet>15</OnIdiom.Tablet>
@@ -81,7 +81,7 @@
                     <dg:DataGridColumn.CellTemplate>
                         <DataTemplate>
                             <ContentView HorizontalOptions="Fill" VerticalOptions="Fill" Margin="5,0,2,0"  >
-                                    <Label Text="{Binding Rank}" HorizontalOptions="CenterAndExpand" LineBreakMode="WordWrap" VerticalOptions="Center" />
+                                    <Label Text="{Binding Rank}" HorizontalOptions="CenterAndExpand" LineBreakMode="WordWrap" VerticalOptions="Center" FontFamily="OpenSans-SemiBold" />
                             </ContentView>
                         </DataTemplate>
                     </dg:DataGridColumn.CellTemplate>
@@ -90,7 +90,7 @@
                         <dg:DataGridColumn.CellTemplate>
                             <DataTemplate>
                                 <ContentView HorizontalOptions="Fill" VerticalOptions="Fill" Margin="5,0,5,0"  >
-                                    <Label Text="{Binding Score}" HorizontalOptions="EndAndExpand" LineBreakMode="WordWrap" VerticalOptions="Center" />
+                                    <Label Text="{Binding Score}" HorizontalOptions="EndAndExpand" LineBreakMode="WordWrap" VerticalOptions="Center" FontFamily="OpenSans-SemiBold" />
                                 </ContentView>
                             </DataTemplate>
                         </dg:DataGridColumn.CellTemplate>
@@ -99,7 +99,7 @@
                         <dg:DataGridColumn.CellTemplate>
                             <DataTemplate>
                                 <ContentView HorizontalOptions="Fill" VerticalOptions="Fill" Margin="5,0,2,0"  >
-                                    <Label Text="{Binding UserName}" HorizontalOptions="Center" LineBreakMode="WordWrap" VerticalOptions="Center" />
+                                    <Label Text="{Binding UserName}" HorizontalOptions="Center" LineBreakMode="WordWrap" VerticalOptions="Center" FontFamily="OpenSans-SemiBold"/>
                                 </ContentView>
                             </DataTemplate>
                         </dg:DataGridColumn.CellTemplate>
@@ -108,7 +108,7 @@
                         <dg:DataGridColumn.CellTemplate>
                             <DataTemplate>
                                 <ContentView HorizontalOptions="Fill" VerticalOptions="Fill" Margin="5,0,2,0"  >
-                                    <Label Text="{Binding CountryName}" HorizontalOptions="StartAndExpand" LineBreakMode="WordWrap" VerticalOptions="Center" />
+                                    <Label Text="{Binding CountryName}" HorizontalOptions="StartAndExpand" LineBreakMode="WordWrap" VerticalOptions="Center" FontFamily="OpenSans-SemiBold"/>
                                 </ContentView>
                             </DataTemplate>
                         </dg:DataGridColumn.CellTemplate>
@@ -118,8 +118,8 @@
                 
                 <dg:DataGrid.RowsBackgroundColorPalette>
                     <dg:PaletteCollection>
-                        <Color>#d1ffdd</Color>
-                        <Color>#e0f1ff</Color>
+                        <Color>#E0E6F8</Color>
+                        <Color>#ffffff</Color>
                     </dg:PaletteCollection>
                 </dg:DataGrid.RowsBackgroundColorPalette>
             </dg:DataGrid>
